# Advanced-To-Do-App

./: .gitignore  CLAUDE.md  PHASE2_COMPLETION_SUMMARY.md  README.md  package.json
.claude/: settings.local.json
backend/: .env.example  .gitignore  CLAUDE.md  Dockerfile  __init__.py  alembic.ini  api.py  app.py  database_init.py  init_db.py  main.py  pyproject.toml  requirements.txt  serverless_main.py  test_api_flow.py  test_neon_db.py  test_registration.py  test_registration2.py  vercel.json
backend/docs/: api-implementation.md  api.md  environment-config.md  environment-setup.md  performance-optimization.md  security-best-practices.md  specification-compliance.md
backend/migrations/: alembic.ini  env.py
backend/scripts/: create_migration.py  run_migrations.py
backend/src/: config.py  config_hf.py  main.py
backend/src/api/: auth.py  deps.py  profiles.py  todos.py
backend/src/auth/: jwt.py  utils.py
backend/src/database/: backup.py  indexes.sql  init_db.py  migrations.py  session.py  transactions.py
backend/src/database/migrations/: 001_initial_schema.py  migration_template.py
backend/src/health/: checks.py  health_check.py
backend/src/logging/: logger_config.py  utils.py
backend/src/middleware/: logging.py  logging_middleware.py  rate_limiter.py  security.py  security_middleware.py
backend/src/models/: __init__.py  base.py  notification.py  profile.py  tag.py  task_share.py  todo.py  user.py
backend/src/monitoring/: metrics.py
backend/src/security/: security_config.py
backend/src/services/: __init__.py  security_service.py  todo_service.py  user_service.py
backend/src/utils/: error_handlers.py  errors.py  responses.py  scheduler.py
backend/tests/: conftest.py  e2e_validation.py  test_auth.py  test_health.py  test_todos.py
frontend/: .env.local.example  .env.staging  .gitignore  CLAUDE.md  copy-locales.js  fix-imports.js  jest.config.js  netlify.toml  next.config.js  package.json  tailwind.config.js
src/: main.py  (+1 more)
(+101 files in other folders)
